try fix layout shift

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -240,8 +240,11 @@ a[rel="tag"]:last-child {
 
 
 footer {
-    padding: 25px 0;
+    margin: auto;
+    padding: 20px;
     text-align: left;
+    max-width: 720px;
+    padding: 20px;
 }
 
 .helptext {
